bugfix gradient wrong color when resize screen

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,7 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
+    background-attachment: fixed;
 }
 
 hr {
